--- a/views/user/recover_password.ejs
+++ b/views/user/recover_password.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="background-color:#199EB8">
 
 <head>
     <meta charset="utf-8">
@@ -9,10 +9,9 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- Favicon icon -->
-    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon.png">
     <title>EasyFinance</title>
     <!-- Bootstrap Core CSS -->
-    <link href="/css/lib/bootstrap/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="/css/helper.css" rel="stylesheet">
     <link href="/css/style2.css" rel="stylesheet">
@@ -45,21 +44,19 @@
     
           <nav id="nav-menu-container">
             <ul class="nav-menu pull-right d-none d-lg-inline">
-              <li><a href="/users/login">Log In</a></li>
+                <li><a href="/users/login">Log In</a></li>
+            </ul>
+            <ul class="nav-menu pull-right d-none d-lg-inline">
+              <li><a href="/users/signup">Sign Up</a></li>
             </ul>
           </nav>
           <!-- #nav-menu-container -->
     
-          <!--SOCIAL MEDIA
-          <nav class="nav social-nav pull-right d-none d-lg-inline">
-            <a href="#"><i class="fa fa-twitter"></i></a> <a href="#"><i class="fa fa-facebook"></i></a> <a href="#"><i class="fa fa-linkedin"></i></a> <a href="#"><i class="fa fa-envelope"></i></a>
-          </nav>
-          -->
     
         </div>
       </header>
 
-<body class="fix-header fix-sidebar">
+<body class="fix-header fix-sidebar" style="background-color:#199EB8">
     <!-- Preloader - style you can find in spinners.css -->
     <div class="preloader">
         <svg class="circular" viewBox="25 25 50 50">
@@ -68,23 +65,22 @@
     <!-- Main wrapper  -->
     <div id="main-wrapper">
 
-        <div class="unix-login">
+         <div class="unix-login">
             <div class="container-fluid">
                 <div class="row justify-content-center">
                     <div class="col-lg-4">
-                        <div class="login-content card">
+                        <div class="login-content card" style="border-radius: 4%">
                             <div class="login-form">
-                              <!-- show any messages that come back with authentication -->
-                                <h4>Recover</h4>
-                                <form data-toggle="validator" role="form" action="/users/forgot" method="post">
+                                <h4>Forgot Password</h4>
+                                <form name="formtovalidate" onsubmit="return validateForm()" action="" method="post">
                                     <div class="form-group">
-                                        <label for="inputEmail" class="control-label">Email</label>
-                                        <input type="email" class="form-control" id="inputEmail" placeholder="Email" data-error="* Not a valid email address" required name="email">
-                                        <div class="help-block with-errors"></div>
-                                    </div>
-                                    <button type="submit" class="btn btn-primary btn-flat m-b-30 m-t-30">Get a Token</button>
+                                        <label class="control-label">Email</label>
+                                        <input onkeypress="validate()" type="email" class="form-control" id="email" placeholder="Email" required name="email">
+                                        <div id = "emailval"></div>
+                                    </div>                        
+                                    <button type="submit" class="btn btn-primary btn-flat m-b-30 m-t-30" id="submitButton">Recover</button>
                                     <div class="register-link m-t-15 text-center">
-                                        <p>Already have account ? <a href="/users/login"> Sign in</a></p>
+                                        <p>Don't have account ? <a href="/users/signup"> Sign Up Here</a></p>
                                     </div>
                                 </form>
                             </div>
@@ -97,20 +93,7 @@
     </div>
     <!-- End Wrapper -->
 
-    <!-- All Jquery -->
-    <script src="/js/lib/jquery/jquery.min.js"></script>
-    <!-- Bootstrap tether Core JavaScript -->
-    <script src="/js/lib/bootstrap/js/popper.min.js"></script>
-    <script src="/js/lib/bootstrap/js/bootstrap.min.js"></script>
-    <!-- slimscrollbar scrollbar JavaScript -->
-    <script src="/js/jquery.slimscroll.js"></script>
-    <!--Menu sidebar -->
-    <script src="/js/sidebarmenu.js"></script>
-    <!--stickey kit -->
-    <script src="/js/lib/sticky-kit-master/dist/sticky-kit.min.js"></script>
-    <!--Custom JavaScript -->
-    <script src="/js/custom.min.js"></script>  
-    <script src="/js/validator.js"></script
+    <% include ./../partials/base/jsstart %>
 
 </body>
 </html>
