--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,19 +8,18 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
-  <!-- Facebook Opengraph integration: https://developers.facebook.com/docs/sharing/opengraph -->
-  <meta property="og:title" content="">
-  <meta property="og:image" content="">
-  <meta property="og:url" content="">
-  <meta property="og:site_name" content="">
-  <meta property="og:description" content="">
-  <!-- Twitter Cards integration: https://dev.twitter.com/cards/  -->
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:site" content="">
-  <meta name="twitter:title" content="">
-  <meta name="twitter:description" content="">
-  <meta name="twitter:image" content="">
-  <% include ./partials/base/headindex %>
+  <!-- Google Fonts -->
+  <link href="//fonts.googleapis.com/css?family=Raleway:400,500,700|Roboto:400,900" rel="stylesheet">
+
+  <!-- Bootstrap CSS File -->
+  <link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Libraries CSS Files -->
+  <link href="/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+
+  <!-- Main Stylesheet File -->
+  <link href="/css/style.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -223,39 +222,24 @@
   <!-- /FAQ -->
 
   <!-- @component: footer -->
-  <footer class="site-footer">
-    <div class="bottom">
-      <div class="container">
-        <div class="row">
+  <% include ./partials/base/footer %>
 
-          <div class="col-lg-6 col-xs-12 text-lg-left text-center">
-            <p class="copyright-text">
-              © EasyFinance. All Rights Reserved.
-            </p>
-            <!--<div class="credits">
-                All the links in the footer should remain intact.
-                You can delete the links only if you purchased the pro version.
-                Licensing information: https://bootstrapmade.com/license/
-                Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Bell
-
-              <a href="https://bootstrapmade.com/">Bootstrap Templates</a> by BootstrapMade
-            </div>-->
-          </div>
-          <div class="col-lg-6 col-xs-12 text-lg-right text-center">
-            <ul class="list-inline">
-              <li class="list-inline-item">
-                <a href="/">Home</a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#features">Features</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </footer>
   <a class="scrolltop" href="#"><span class="fa fa-angle-up"></span></a>
-  <% include ./partials/base/scriptsindex %>
+
+  <script src="/lib/jquery/jquery.min.js"></script>
+  <script src="/lib/jquery/jquery-migrate.min.js"></script>
+  <script src="/lib/superfish/hoverIntent.js"></script>
+  <script src="/lib/superfish/superfish.min.js"></script>
+  <script src="/lib/tether/js/tether.min.js"></script>
+  <script src="/lib/stellar/stellar.min.js"></script>
+  <script src="/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="/lib/waypoints/waypoints.min.js"></script>
+  <script src="/lib/easing/easing.js"></script>
+  <script src="/lib/stickyjs/sticky.js"></script>
+  <script src="/lib/parallax/parallax.js"></script>
+  <script src="/lib/lockfixed/lockfixed.min.js"></script>
+  <!-- Template Specisifc Custom Javascript File -->
+  <script src="/js/land.js"></script>
+  
 </body>
 </html>
