--- a/views/partials/dashboard/dash_sidebar.ejs
+++ b/views/partials/dashboard/dash_sidebar.ejs
@@ -6,7 +6,7 @@
                 <nav class="sidebar-nav">
                     <ul id="sidebarnav">
                         <li class="nav-devider"></li>
-                        <li> <a href="#"><i class="fa fa-home"></i><span>Home</span></a> </li>
+                        <li> <a href="/users/dashboard"><i class="fa fa-home"></i><span>Home</span></a> </li>
                         <li> <a class="has-arrow" href="#" aria-expanded="false"><i class="fa fa-bank"></i><span class="hide-menu">Accounts</span></a>
                             <ul aria-expanded="false" class="collapse">
                                 <li><a href="/users/dashboard/accounts/credit">Credit</a></li>
