--- a/views/user/dashboard/main.ejs
+++ b/views/user/dashboard/main.ejs
@@ -38,13 +38,14 @@
                 <!-- Start Page Content -->
                 <div class="row">
                     <div class="col-md-3">
+                        <a href="#" onclick="document.getElementById('coin').style.display='block'">
                         <div class="card p-30">
                             <div class="media">
                                 <div class="media-left meida media-middle">
                                     <span><i class="fa fa-usd f-s-40 color-primary"></i></span>
                                 </div>
                                 <div class="media-body media-text-right">
-                                    <h2>568.000</h2>
+                                    <h2>0</h2>
                                     <p class="m-b-0">Balance</p>
                                 </div>
                             </div>
@@ -68,7 +69,7 @@
                 </div>
             </div>        
             <!-- End Container fluid  -->
-            
+            <% include ./../../partials/dashboard/changecoin %>
             <!-- footer -->
             <% include ./../../partials/dashboard/footer %>
             <!-- End footer -->
