Added views - create_budget and select_accounts

--- a/views/partials/dashboard/dash_sidebar.ejs
+++ b/views/partials/dashboard/dash_sidebar.ejs
@@ -12,6 +12,7 @@
                                 <li><a href="/users/dashboard/accounts/credit">Credit</a></li>
                                 <li><a href="/users/dashboard/accounts/savings">Savings</a></li>
                                 <li><a href="/users/dashboard/accounts/current">Current</a></li>
+                                <li><a href="/users/dashboard/accounts/budget">Budgets</a></li>
                             </ul>
                         </li>
                         <li> <a href="#" class="disabled"><i class="fa fa-bitcoin"></i><span>Criptocurrency</span></a> </li>
