--- a/views/user/dashboard/create_budget.ejs
+++ b/views/user/dashboard/create_budget.ejs
@@ -37,9 +37,32 @@
             <div class="container-fluid">
                 <!-- Start Page Content -->
                 <div class="card-body">
-                    <% include ./../../partials/dashboard/listaccounts.ejs %>
-                    <!--formulario con checkbox de las cuentas entregadas por la api-->
-                </div>
+                    <div class="login-form">
+                        <h2 class="control-label">Create a Budget</h4>
+                        <form>
+                            <div class="form-group">
+                                 <label class="control-label">Name Budget</label>
+                                 <input name="name" type="text" class="form-control" placeholder="Name" required>
+                            </div>
+                            <div class="form-group">
+                                 <select id="soflow">
+                                    <option>Select a Currency</option>
+                                    <option>lista de monedas</option>
+                                    <!--document.getElementById("soflow").value retorna la opcion seleccionada  posicion 0 es "select a currency"-->
+                                </select>
+                            </div>
+                            <div class="form-group">
+                                 <label class="control-label">Amount of Money</label>
+                                 <input name="money" type="number" min="0" step="any" class="form-control" placeholder="amount" required>
+                            </div>
+                            <div class="form-group">
+                                 <label class="control-label">Link the Accounts</label>
+                                 <!--modal?-->
+                                 <% include ./../../partials/dashboard/listaccounts.ejs %>
+                                 <!-- Formulario checkbox con las cuentas del usuario -->
+
+                            </div>
+
             </div>        
             <!-- End Container fluid  -->
             <% include ./../../partials/dashboard/changecoin %>
