--- a/views/user/dashboard/main.ejs
+++ b/views/user/dashboard/main.ejs
@@ -50,6 +50,7 @@
                                 </div>
                             </div>
                         </div>
+                        </a>
                     </div>
                     <div class="col-md-3">
                         <a href="/users/dashboard/add_account">
@@ -59,8 +60,23 @@
                                     <span><i class="fa fa-plus f-s-40 color-primary"></i></span>
                                 </div>
                                 <div class="media-body media-text-right">
-                                    <h2>Add Account</h2>
+                                    <h2>Bank Sync</h2>
                                     <p class="m-b-0">Bank Accounts</p>
+                                </div>
+                            </div>
+                        </div>
+                        </a>
+                    </div>
+                    <div class="col-md-3">
+                        <a href="/users/dashboard/create_budget">
+                        <div class="card p-30">
+                            <div class="media">
+                                <div class="media-left meida media-middle">
+                                    <span><i class="fa fa-plus f-s-40 color-primary"></i></span>
+                                </div>
+                                <div class="media-body media-text-right">
+                                    <h2>Create a Budget</h2>
+                                    <p class="m-b-0">Budget Accounts</p>
                                 </div>
                             </div>
                         </div>
