--- a/views/user/recover_password.ejs
+++ b/views/user/recover_password.ejs
@@ -72,7 +72,7 @@
                         <div class="login-content card" style="border-radius: 4%">
                             <div class="login-form">
                                 <h4>Forgot Password</h4>
-                                <form name="formtovalidate" onsubmit="return validateForm()" action="/users/signup" method="POST">
+                                <form name="formtovalidate" onsubmit="return validateForm()" action="/users/password_recovery" method="POST">
                                     <div class="form-group">
                                         <label class="control-label">Email</label>
                                         <input name="email" onkeyup="validate()" type="email" class="form-control" id="email" placeholder="Email" required>
