--- a/views/user/dashboard/current.ejs
+++ b/views/user/dashboard/current.ejs
@@ -26,7 +26,7 @@
             <!-- Bread crumb -->
             <div class="row page-titles">
                 <div class="col-md-5 align-self-center">
-                    <h3 class="text-primary">Credit Accounts</h3> </div>
+                    <h3 class="text-primary">Current Accounts</h3> </div>
             </div>
             <!-- End Bread crumb -->
             <!-- Container fluid  -->
