--- a/views/user/dashboard/savings.ejs
+++ b/views/user/dashboard/savings.ejs
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <% include ./../../partials/dashboard/head %>
+    <% include ./../../partials/dashboard/dash_head %>
 </head>
 <body class="fix-header fix-sidebar">
     <!-- Preloader - style you can find in spinners.css -->
     <div class="preloader">
         <svg class="circular" viewBox="25 25 50 50">
-            <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10" /> </svg>
+			<circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10" /> </svg>
     </div>
 
     <!-- Main wrapper  -->
@@ -19,65 +19,40 @@
         <!-- End header header -->
 
         <!-- Left Sidebar  -->
-        <% include ./../../partials/dashboard/leftsidebar %>
+        <% include ./../../partials/dashboard/dash_sidebar %>
         <!-- End Left Sidebar  -->
         <!-- Page wrapper  -->
         <div class="page-wrapper">
             <!-- Bread crumb -->
             <div class="row page-titles">
                 <div class="col-md-5 align-self-center">
-                    <h3 class="text-primary">Credit Accounts</h3> </div>
+                    <h3 class="text-primary">Savings Accounts</h3> </div>
             </div>
             <!-- End Bread crumb -->
             <!-- Container fluid  -->
             <div class="container-fluid">
-                
-                
-                
+    
                 <!-- Start Page Content -->
                 <div class="card-body">
-                        <div class="horizontal-form-elements">
-                            <form class="form-horizontal">
-                                <div class="row">
-
-                                       <div class="col-lg-9">
-                                            <div class="card">
-                                                <div class="card-title">
-                                                    <h4>Recent Orders </h4>
-                                                </div>
-                                                <div class="card-body">
-                                                    <div class="table-responsive">
-                                                        <table class="table">
-                                                            <thead>
-                                                                <tr>
-                                                                    <th>Number</th>
-                                                                    <th>Bank</th>
-                                                                    <th>Type</th>
-                                                                    <th>Good Thru</th>
-                                                                    <th></th>
-                                                                    <th></th>
-                                                                </tr>
-                                                            </thead>
-                                                            <tbody>
-
-                                                                <tr>
-                                                                    <td>BD</td>
-                                                                    <td><span>BD</span></td>
-                                                                    <td><span>BD</span></td>
-                                                                    <td><span>BD</span></td>
-                                                                    <td><a class="btn btn-info">Edit</a></td>
-                                                                    <td><a class="btn btn-info">Delete</a></td>
-                                                                </tr>
-                                                                
-                                                            </tbody>
-                                                        </table>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                </div> 
-                        </form>    
+                    <div class="login-form">
+                        <div class="form-group">
+                            <table>
+                                <tr>
+                                    <th>Account</th>
+                                    <th>Bank</th>
+                                    <th>Balance</th>
+                                    <th>Delete</th>
+                                </tr>
+                                <!--De Api-->
+                                <tr>
+                                    <td>xxxxx</td>
+                                    <td>xxxxx</td>
+                                    <td>xxxxx</td>
+                                    <td><button class="btn btn-primary btn-flat">Delete</button></td>
+                                </tr>
+                                <!--!!-->
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
