--- a/views/partials/dashboard/dash_header.ejs
+++ b/views/partials/dashboard/dash_header.ejs
@@ -20,7 +20,7 @@
                     <ul class="navbar-nav my-lg-0">
 
                         <!-- Comment -->
-                        <li class="nav-item dropdown">
+                        <!--<li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-muted text-muted  " href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="fa fa-bell"></i>
                                 <div class="notify"> <span class="heartbit"></span> <span class="point"></span> </div>
                             </a>
@@ -31,7 +31,6 @@
                                     </li>
                                     <li>
                                         <div class="message-center">
-                                            <!-- Message -->
                                             <a href="#">
                                                 <div class="btn btn-danger btn-circle m-r-10"><i class="fa fa-link"></i></div>
                                                 <div class="mail-contnet">
@@ -47,6 +46,7 @@
                                 </ul>
                             </div>
                         </li>
+                        -->
                         <!-- End Comment -->
                         
                         <!-- Profile -->
