--- a/views/user/dashboard/create_budget.ejs
+++ b/views/user/dashboard/create_budget.ejs
@@ -74,12 +74,12 @@
                                                 <input name="name" type="checkbox" class="form-control" placeholder="account" required>
                                         </div>
                                         <button type="submit" class="btn btn-primary">Sync</button>
-                                        <button href="/users/dashboard/add_account" class="btn btn-secondary">Cancel</button>
                                     </form>
                                 </div>
                                  <!-- Formulario checkbox con las cuentas del usuario -->
 
                             </div>
+                            <a href="/users/dashboard"><button class="btn btn-secondary">Cancel</button></a>
 
             </div>        
             <!-- End Container fluid  -->
