--- a/views/user/dashboard/select_accounts.ejs
+++ b/views/user/dashboard/select_accounts.ejs
@@ -53,7 +53,7 @@
                                     <input name="name" type="checkbox" class="form-control" placeholder="account" required>
                             </div>
                             <button type="submit" class="btn btn-primary">Sync</button>
-                            <button href="/users/dashboard/add_account" class="btn btn-secondary">Cancel</button>
+                            <a href="/users/dashboard/add_account"><button class="btn btn-secondary">Cancel</button></a>
                         </form>
                     </div>
                     <!--formulario con checkbox de las cuentas entregadas por la api-->
