--- a/views/user/dashboard/create_budget.ejs
+++ b/views/user/dashboard/create_budget.ejs
@@ -53,7 +53,7 @@
                             </div>
                             <div class="form-group">
                                  <label class="control-label">Amount of Money</label>
-                                 <input name="money" type="number" min="0" step="any" class="form-control" placeholder="amount" required>
+                                 <input name="money" type="number" min="0" step="any" class="form-control" placeholder="Amount" required>
                             </div>
                             <div class="form-group">
                                  <label class="control-label">Link the Accounts</label>
