--- a/views/user/dashboard/credit.ejs
+++ b/views/user/dashboard/credit.ejs
@@ -48,7 +48,7 @@
                                     <td>xxxxx</td>
                                     <td>xxxxx</td>
                                     <td>xxxxx</td>
-                                    <td><button class="btn btn-primary btn-flat">Delete</button></td>
+                                    <td><button class="btn btn-primary btn-flat" onclick="deleteAcc()">Delete</button></td>
                                 </tr>
                                 <!--!!-->
                             </table>
