--- a/views/partials/dashboard/banklogin.ejs
+++ b/views/partials/dashboard/banklogin.ejs
@@ -15,10 +15,14 @@
             <div class="form-group">
                 <input class="form-control" type="password" placeholder="Pin password" required name="">
             </div>
+            <input name="bank" type='hidden' id= "hiddenbank" name='id' value='' />
+            <button type="submit" class="btn btn-primary">Login</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="document.getElementById('banklogin').style.display='none'">Close</button>
+          </form>
       </div>
       <div class="modal-footer">
-        <button type="submit" class="btn btn-primary">Login</button>
-        <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="document.getElementById('banklogin').style.display='none'">Close</button>
+        
+        
       </div>
     </div>
   </div>
