Added Group Accounts views

--- a/views/partials/dashboard/dash_sidebar.ejs
+++ b/views/partials/dashboard/dash_sidebar.ejs
@@ -15,6 +15,7 @@
                                 <li><a href="/users/dashboard/accounts/budget">Budgets</a></li>
                             </ul>
                         </li>
+                        <li> <a href="/users/dashboard/accounts/group_accounts"><i class="fa fa-bank"></i><span>Groups</span></a> </li>
                         <!--
                         <li> <a href="#" class="disabled"><i class="fa fa-bitcoin"></i><span>Criptocurrency</span></a> </li>
                         <li> <a href="#" class="disabled"><i class="fa fa-money"></i><span>Investments</span></a> </li>
