--- a/views/user/dashboard/main.ejs
+++ b/views/user/dashboard/main.ejs
@@ -82,6 +82,21 @@
                         </div>
                         </a>
                     </div>
+                    <div class="col-md-3">
+                        <a href="/users/dashboard/group_accounts">
+                        <div class="card p-30">
+                            <div class="media">
+                                <div class="media-left meida media-middle">
+                                    <span><i class="fa fa-plus f-s-40 color-primary"></i></span>
+                                </div>
+                                <div class="media-body media-text-right">
+                                    <h2>Group Accounts</h2>
+                                    <p class="m-b-0">New Group</p>
+                                </div>
+                            </div>
+                        </div>
+                        </a>
+                    </div>
                 </div>
             </div>        
             <!-- End Container fluid  -->
