--- a/views/user/dashboard/group.ejs
+++ b/views/user/dashboard/group.ejs
@@ -38,48 +38,36 @@
                 <!-- Start Page Content -->
                 <div class="card-body">
                     <div class="login-form">
-                        <h2 class="control-label">Create a Budget</h4>
-                        <form action="" method="POST">
+                        <h2 class="control-label">New Group</h4>
+                        <form method="POST" action="">
                             <div class="form-group">
-                                 <label class="control-label">Budget Name</label>
+                                 <label class="control-label">Group Name</label>
                                  <input name="name" type="text" class="form-control" placeholder="Name" required>
-                            </div>
-                            <div class="form-group">
-                                 <select id="soflow">
-                                    <option>Select a Currency</option>
-                                    <option>lista de monedas</option>
-                                    <!--document.getElementById("soflow").value retorna la opcion seleccionada  posicion 0 es "select a currency"-->
-                                </select>
-                            </div>
-                            <div class="form-group">
-                                 <label class="control-label">Amount of Money</label>
-                                 <input name="money" type="number" min="0" step="any" class="form-control" placeholder="Amount" required>
-                            </div>
+                            </div>                           
                             <div class="form-group">
                                  <label class="control-label">Link the Accounts</label>
                                  <!--modal?-->
                                  <div class="login-form">
                                     <h2 class="control-label">Select to Sync your Accounts</h4>
-                                    <label class="control-label">Credit Accounts</label>
-                                    <div class="form-group">
-                                            <input name="name" type="checkbox" class="form-control" placeholder="account" required>
-                                    </div>
-                                    <label class="control-label">Savings Accounts</label>
-                                    <div class="form-group">
-                                            <input name="name" type="checkbox" class="form-control" placeholder="account" required>
-                                    </div>
-                                    <label class="control-label">Currrent Accounts</label>
-                                    <div class="form-group">
-                                            <input name="name" type="checkbox" class="form-control" placeholder="account" required>
-                                    </div>
+                                        <label class="control-label">Credit Accounts</label>
+                                        <div class="form-group">
+                                                <input name="name" type="checkbox" class="form-control" placeholder="account" required>
+                                        </div>
+                                        <label class="control-label">Savings Accounts</label>
+                                        <div class="form-group">
+                                                <input name="name" type="checkbox" class="form-control" placeholder="account" required>
+                                        </div>
+                                        <label class="control-label">Currrent Accounts</label>
+                                        <div class="form-group">
+                                                <input name="name" type="checkbox" class="form-control" placeholder="account" required>
+                                        </div>                   
                                 </div>
                                  <!-- Formulario checkbox con las cuentas del usuario -->
-
+                                  
                             </div>
                             <button type="submit" class="btn btn-primary">Create</button>
-                        </form>                        
+                        </form>
                         <a href="/users/dashboard"><button class="btn btn-secondary">Cancel</button></a>
-                    </div>
                 </div>
             </div>        
             <!-- End Container fluid  -->
