Update for render view

--- a/views/user/dashboard/addbank.ejs
+++ b/views/user/dashboard/addbank.ejs
@@ -46,7 +46,7 @@
                 <!-- Start Page Content -->
                 <div class="card-body">
                     <h2 class="control-label">Search your Bank</h2>
-                        <form class="form-horizontal form-material" autocomplete="off" action="">
+                        <form class="form-horizontal form-material" autocomplete="off" action="/users/dashboard/add_account">
                         <div class="form-group autocomplete" style="width:300px; position:relative;">                                             
                             <input style="text-indent:30px;" id="searchbar" class="form-control form-control-line" type="text" name="search" placeholder="Type a bank...">
                             <span style="position:absolute; top:12px; bottom:12px; left:12px; font-size:20px" class="fa fa-search"></span>
